--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="panel active" style="background-image: url(/img/forest.avif)">
+        <div class="panel active" style="background-image: url(https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80)">
           <h3>Explore The World</h3>
         </div>
-        <div class="panel" style="background-image: url(/img/Lake.avif)">
+        <div class="panel" style="background-image: url(https://images.unsplash.com/photo-1473448912268-2022ce9509d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1141&q=80)">
           <h3>Wild Forest</h3>
         </div>
-        <div class="panel" style="background-image: url(/img/Beach.avif)">
+        <div class="panel" style="background-image: url(https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80)">
           <h3>Sunny Beach</h3>
         </div>
-        <div class="panel" style="background-image: url(/img/red\ sea.avif)">
+        <div class="panel" style="background-image: url(https://images.unsplash.com/photo-1682246687930-449a3881065d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80)">
           <h3>Red Coast</h3>
         </div>
-        <div class="panel" style="background-image: url(/img/Moutains.avif)">
+        <div class="panel" style="background-image: url(https://images.unsplash.com/photo-1628607292260-9195108b03b7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80)">
           <h3>Mountains - Clouds</h3>
         </div>
   
